--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
-    <title>Get It Done</title>
+    <title>BODMAS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="icon" href="images/favicons/favicon-32x32.png">
@@ -72,7 +72,7 @@
                         <br>
                         <input id="get" type="text", name="sub" value="">
                         <br>
-                        <input type="submit", value="Submit">
+                        <input type="submit" onclick="valid();", value="Submit">
                     </form>
                 </h2>
 
