--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             You have to answer 3 or more correct question out of 5 to get to the next level if you are 
             already on level 3 incorrect questions and you are out. <br>
             You will be promoted to the next level once the current level is cleared. <br> 
+            You have 10 seconds to answer each question
         </h2>
         <h2 class="bold">Choose your difficulty level : </h2>
         <div class="buttonlevel">
