--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="icon" href="images/favicons/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/720d275f39.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,6 +35,17 @@
                     <span id="light" class="current-theme" onclick="updateTheme('light')">Light</span>
                     <span id="dark" onclick="updateTheme('dark')">Dark</span>
                 </h5>
+
+                <div class="socials">
+                    <ul>
+                        <li><a href="mailto:sohamsahare123@gmail.com" target="blank"><i class="fas fa-envelope"></i></a></li>
+                        <li><a href="https://github.com/sohamsahare123" target="blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/soham-sahare-5b96a1182/" target="blank"><i class="fab fa-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/soham.sahare.9" target="blank"><i class="fab fa-facebook"></i></a></li>                      
+                        <li><a href="https://www.instagram.com/_soham.sahare/" target="blank"><i class="fab fa-instagram"></i></a></li>                      
+                    
+                    </ul>
+                </div>
 
             </section>
 
