--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <header id="head1">
                 
-                <div id="start">Start Quiz!</div>
+                <div id="start" onclick="bg_clr();">Start Quiz!</div>
 
                 <div id="quiz" style="display: none">
 
@@ -101,7 +101,13 @@
                         <div id="timeGauge"></div>
                     </div>
 
-                    <div id="progress"></div>
+                    <div id="progress">
+                        <div class='prog' id=0></div>
+                        <div class='prog' id=1></div>
+                        <div class='prog' id=2></div>
+                        <div class='prog' id=3></div>
+                        <div class='prog' id=4></div>
+                    </div>
 
                 </div>
             
